--- a/play.html
+++ b/play.html
@@ -60,8 +60,6 @@ var GameBoard = [
     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], //14
 ]
 
-
-
 Engine.onmessage = function(e) {
     console.log("salut:", e.data);
     console.log(e.data.bestmove);
@@ -120,6 +118,56 @@ function checkForWin(Board, x, y) {
     return false;
 }
 
+function scoreWithTensorflow(score) {
+    // Define a model for linear regression.
+    const model = tf.sequential();
+    model.add(tf.layers.dense({units: 1, inputShape: [1]}));
+
+    // Prepare the model for training: Specify the loss and the optimizer.
+    model.compile({loss: 'meanSquaredError', optimizer: 'sgd'});
+
+    // Generate some synthetic data for training.
+    const xs = tf.tensor2d(GameBoard, [4, 1]);
+    const ys = tf.tensor2d(GameBoard, [4, 1]);
+
+    model.fit(xs, ys).then(() => {
+        model.predict(tf.tensor2d([5], [1, 1])).print();
+    });
+    return model.predict(tf.tensor2d([5], [1, score]));
+}
+
+function superScore() {
+    var score = 0;
+    var i = parseInt(document.getElementById("input-i").value);
+    var j = parseInt(document.getElementById("input-j").value);
+    var currentPlayer = GameBoard[i][j];
+    var directions = [
+        [0, 1], // Horizontal
+        [1, 0], // Vertical
+        [1, 1], // Diagonal (\)
+        [1, -1] // Diagonal (/)
+    ];
+    for (var [dx, dy] of directions) {
+        var count = 1;
+        var i = i + dx;
+        var j = j + dy;
+        while (i >= 0 && i <GameBoard.length && j >= 0 && j <GameBoard[0].length && GameBoard[i][j] === currentPlayer) {
+            count++;
+            i += dx;
+            j += dy;
+        }
+        i = i-dx;
+        j = j-dy;
+        while (i >= 0 && i <GameBoard.length && j >= 0 && j <GameBoard[0].length && GameBoard[i][j] === currentPlayer) {
+            count++;
+            i -= dx;
+            j -= dy;
+        }
+        if (count >= 20)
+            score += scoreWithTensorflow(count);
+    }
+    return score;
+}
 
 function handleUserMove() {
     var i = parseInt(document.getElementById("input-i").value);
@@ -127,6 +175,7 @@ function handleUserMove() {
 
     GameBoard[i][j] = -1;
     afficherTableau();
+    superScore();
 
     if (checkForWin(GameBoard, i, j)) {
         document.getElementById('Title').innerText = 'Player wins!';
